--- a/app/frontend/src/components/PatientCodeInput/PatientCodeInput.module.css
+++ b/app/frontend/src/components/PatientCodeInput/PatientCodeInput.module.css
@@ -2,7 +2,7 @@
     border-radius: 8px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     height: 35px;
-    width: 40%;
+    width: 500px;
     padding: 0px 15px;
     background: white;
     margin-bottom: 10px;
