--- a/app/frontend/src/pages/document/Document.module.css
+++ b/app/frontend/src/pages/document/Document.module.css
@@ -1,94 +1,71 @@
-.container {
+.documentContainer {
+    display: flex;
     flex: 1;
+    flex-direction: column;
+    align-items: center;
+}
+
+.documentTopSection {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.documentBottomSection {
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    width: 100%;
     margin-top: 20px;
 }
 
-.chatRoot {
-    flex: 1;
-    display: flex;
-}
-
-.chatContainer {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.chatEmptyState {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 1024px;
-    padding-top: 60px;
-}
-
-.chatEmptyStateTitle {
+.documentTitle {
     font-size: 4rem;
     font-weight: 600;
-    margin-top: 0;
-    margin-bottom: 30px;
+    margin-top: 130px;
 }
 
-.chatEmptyStateSubtitle {
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-@media only screen and (max-height: 780px) {
-    .chatEmptyState {
-        padding-top: 0;
-    }
-
-    .chatEmptyStateTitle {
+@media only screen and (max-width: 800px) {
+    .documentTitle {
         font-size: 3rem;
-        margin-bottom: 0px;
+        font-weight: 600;
+        margin-top: 0;
     }
 }
 
-.chatMessageStream {
-    flex-grow: 1;
-    max-height: 1024px;
-    max-width: 1028px;
+.documentQuestionInput {
+    max-width: 800px;
     width: 100%;
-    overflow-y: auto;
-    padding-left: 24px;
-    padding-right: 24px;
-    display: flex;
-    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.chatMessageGpt {
-    margin-bottom: 20px;
-    max-width: 80%;
-    display: flex;
-    min-width: 500px;
-}
-
-.chatMessageGptMinWidth {
-    max-width: 500px;
-    margin-bottom: 20px;
-}
-
-.patientCodeInput {
-    position: sticky;
-    bottom: 0;
-    flex: 0 0 100px;
-    padding-top: 12px;
-    padding-bottom: 0px;
-    padding-left: 24px;
-    padding-right: 24px;
+.documentAnswerContainer {
+    max-width: 800px;
     width: 100%;
-    max-width: 1028px;
-    background: #f2f2f2;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.chatInput {
+.documentAnalysisPanel {
+    width: 600px;
+    margin-left: 20px;
+}
+
+.documentSettingsSeparator {
+    margin-top: 15px;
+}
+
+.settingsButton {
+    align-self: flex-end;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+.documentInput {
     position: sticky;
     bottom: 0;
     flex: 0 0 100px;
@@ -101,28 +78,3 @@
     background: #f2f2f2;
 }
 
-.chatAnalysisPanel {
-    flex: 1;
-    overflow-y: auto;
-    max-height: 89vh;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.chatSettingsSeparator {
-    margin-top: 15px;
-}
-
-.loadingLogo {
-    font-size: 28px;
-}
-
-.commandsContainer {
-    display: flex;
-    align-self: flex-end;
-}
-
-.commandButton {
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
